examples/ui/gradio/gradio-rag-milvus-hftgi/deployment/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gradio-rag-milvus-hftgi
  labels:
    app: gradio-rag-milvus-hftgi
spec:
  replicas: 0
  selector:
    matchLabels:
      app: gradio-rag-milvus-hftgi
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gradio-rag-milvus-hftgi
    spec:
      restartPolicy: Always
      schedulerName: default-scheduler
      affinity: {}
      terminationGracePeriodSeconds: 120
      securityContext: {}
      containers:
        - resources:
            limits:
              cpu: '2'
              memory: 4Gi
            requests:
              cpu: '1'
              memory: 2Gi
          readinessProbe:
            httpGet:
              path: /queue/status
              port: http
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: server
          livenessProbe:
            httpGet:
              path: /queue/status
              port: http
              scheme: HTTP
            timeoutSeconds: 8
            periodSeconds: 100
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 7860
              protocol: TCP
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /queue/status
              port: http
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 24
          terminationMessagePolicy: File
          image: 'quay.io/jstakun/gradio-rag-milvus-hftgi:latest'
          volumeMounts:
            - name: collections
              mountPath: /opt/app-root/src/collections.json
              subPath: collections.json
            - name: prompt
              mountPath: /opt/app-root/src/prompt.txt
              subPath: prompt.txt
      volumes:
        - name: collections
          configMap:
            name: collections
            items:
              - key: collections.json
                path: collections.json
            defaultMode: 420
        - name: prompt
          configMap:
            name: prompt
            items:
              - key: prompt.txt
                path: prompt.txt
            defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
